--- a/data/1.yaml
+++ b/data/1.yaml
@@ -7,5 +7,10 @@ ifaces:
     xx: 123
     yy: aaf
     zz: [4,5,6]
+    ww: [1.1,4.3]
   - object: object_c
     c: abcde
+    e:
+      a: 3
+    f: 
+      true: T
